...

        <TextView
            android:id="@+id/tvInput"
            android:layout_width="389dp"
            android:layout_height="357dp"
...

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
...

                <Button
                    android:id="@+id/clearAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
...

                <Button
                    android:id="@+id/multiplyButton"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/divideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num7Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num9Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/minusButton"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num8Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num4Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num6Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/plusButton"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num5Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num1Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num3Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/rootButton"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num2Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/num0Button"
                    android:layout_width="177dp"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/dotButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

                <Button
                    android:id="@+id/resultButton"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
...
