<resources>
    <string name="app_name">MiPT03</string>
    <string name="tvInput_default">0</string>
    <string name="calc_clear">C</string>
    <string name="calc_clear_all">CE</string>
    <string name="calc_multiply">x</string>
    <string name="calc_divide">/</string>
    <string name="calc_minus">-</string>
    <string name="calc_plus">+</string>
    <string name="calc_sqrt">√</string>
    <string name="calc_dot">.</string>
...
